wuhu/filecodebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filecodebox-service
spec:
  selector:
    app: filecodebox
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 12345
