wuhu/filecodebox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filecodebox-ingress
spec:
  rules:
  - host: filecodebox.haijin666.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filecodebox-service
            port:
              number: 12345
